# PlagiaMon

./: CMakeLists.txt
src/: attack.cpp  main.cpp  pokemon.cpp
src/include/: attack.hpp  pokemon.hpp
